?? Sep 2006, PHP 5.2.0RC4
- Removed current working directory from the php.ini search path for CLI and
  readded it for other SAPIs (restore to pre 5.1.x behaviour). (Edin)
- Fixed bug #38700 (SoapClient::__getTypes never returns). (Dmitry)
- Fixed bug #38693 (curl_multi_add_handle() set curl handle to null). (Ilia)
- Fixed bug #38661 (mixed-case URL breaks url-wrappers). (Ilia)


31 Aug 2006, PHP 5.2.0RC3
- Updated PCRE to version 6.7. (Ilia)
- Added SoapServer::setObject() method (it is a simplified version of
  SoapServer::setClass() method). (Dmitry)
- Added support for hexadecimal entity in imagettftext() for the bundled GD.
  (Pierre)
- Fixed bug #38653 (memory leak in ReflectionClass::getConstant()). (Tony)
- Fixed bug #38637 (curl_copy_handle() fails to fully copy the cURL handle).
  (Tony, Ilia)
- Fixed bug #38624 (Strange warning when incrementing an object property and 
  exception is thrown from __get method). (Tony)
- Fixed bug #38543 (shutdown_executor() may segfault when memory_limit is too
  low). (Dmitry)
- Fixed bug #38535 (memory corruption in pdo_pgsql driver on error retrieval
  inside a failed query executed via query() method). (Ilia)
- Fixed bug #38534 (segfault when calling setlocale() in userspace session 
  handler). (Tony)
- Fixed bug #38524 (strptime() does not initialize the internal date storage
  structure). (Ilia)
- Fixed bug #38511, #38473, #38263 (Fixed session extension request shutdown
  order to ensure it is shutdown before the extensions it may depend on).
  (Ilia)
- Fixed bug #38488 (Access to "php://stdin" and family crashes PHP on win32).
  (Dmitry)
- Fixed bug #38474 (getAttribute select attribute by order, even when 
  prefixed). (Rob)
- Fixed bug #38315 (Constructing in the destructor causes weird behaviour).
  (Dmitry)
- Fixed bug #38265 (heap corruption). (Dmitry)
- Fixed bug #38199 (fclose() unable to close STDOUT and STDERR). (Tony)
- Fixed bug #33895 (Missing math constants). (Hannes)